--- a/css/estiloAdmin.css
+++ b/css/estiloAdmin.css
@@ -5,6 +5,18 @@
     --color-borde: blue;
 }
 
+button {
+    background-color: rgb(13, 136, 177);
+    border: none;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  margin-left: 700px;
+  }
+
 table {
     width: 80%;
     background-color: var(--color-background);
