--- a/css/estiloAdmin.css
+++ b/css/estiloAdmin.css
@@ -27,7 +27,7 @@ table {
 }
 
 html {
-    background-image: radial-gradient(circle, #4ba0af, #335fa665);
+    background: url(https://fondosmil.com/fondo/31951.jpg);
 }
 
 input{
